tests/tmytests/bad/function_redefinition.lat
int f() {
    return 7;
}

int f() {
    return 8;
}

int main() {
    return 0;
}